debugging + gemma3